# backend-service-skeleton

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3dafb612f4a7_initial.py  69c51592b0cf_initial_migration.py
app/: __main__.py  app.py  config.py
app/api/: routes.py
app/cleanups/: __init__.py  database.py  rabbitmq.py  redis.py
app/crud/: __init__.py  message_crud.py  transaction_crud.py  user_crud.py
app/middlewares/: __init__.py  error_handler.py
app/models/: __init__.py  crud.py  message.py  serializers.py  transaction.py  user.py
app/schemas/: __init__.py  transaction.py  user.py
app/services/: __init__.py  cache_service.py  messaging_service.py  transaction_service.py  two_phase_commit.py  user_service.py
app/startups/: __init__.py  database.py  rabbitmq.py  redis.py
app/utils/: time_utils.py
tests/: test_api.py  test_transactions.py
