[tool.poetry]
name = "backend-service-skeleton"
version = "0.1.0"
description = "test task"
authors = ["Evgeny A.G. <e.a.gurin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
gino = "^1.0.1"
psycopg2 = "^2.9.9"
SQLAlchemy = "1.3"
psycopg2-binary = "^2.9.9"
uvloop = "^0.19.0"
environs = "^9.5.0"
requests = "^2.32.3"
python-dotenv = "^0.21.1"
alembic = "^1.13.1"
python-decouple = "^3.8"
gunicorn = "^22.0.0"
asyncpg = ">=0.21.0"
loguru = "^0.7.2"
aiohttp-swagger = "^1.0.16"
aio-pika = "^9.4.1"
pydantic = "^2.7.3"
redis = "^5.0.6"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
flake8 = "^5.0.4"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["./app"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]

[tool.pre-commit]
repos = [
  { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.0.1", hooks = [
    { id = "trailing-whitespace" },
    { id = "end-of-file-fixer" },
    { id = "check-yaml" },
    { id = "check-added-large-files" }
  ]},
  { repo = "https://github.com/psf/black", rev = "23.3.0", hooks = [
    { id = "black", args = ["--line-length=79"] }
  ]},
  { repo = "https://github.com/pre-commit/mirrors-isort", rev = "v5.10.1", hooks = [
    { id = "isort", args = ["--profile", "black", "--line-length", "79"] }
  ]}
]
